# libcards

./: .gitignore  .gitmodules  INSTALL  Makefile.am  README-alpha  configure.ac  test_deck.c
include/cards/: cards.h
include/cards/decks/: standard.h
src/: Makefile.am  cards.c  cards.h  deck.c  deck.h  rand.c  rand.h  rand_p.h
test/: Makefile.am  tap.c  tap.h  test.h  test_cards.c  test_deck.c  test_deck.h  test_deck_data.h  test_rand.c  test_shuffle.c
